Attempt to improve performance slightly